Fix display of radio-btn inner circle not centered in firefox

--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -277,16 +277,17 @@ input {
 .checkbox-label .checkbox-icon::after,
 .checkbox2-label .checkbox-icon::after {
   content: "";
-  width: 13px;
-  height: 13px;
+  width: 12px;
+  height: 12px;
   background-color: #279e7a;
   border-radius: 50%;
-  text-indent: 29px;
   white-space: nowrap;
   position: absolute;
-  left: 50%;
+
   top: 50%;
+  left: 50%;
   transform: translate(-50%, -50%);
+  text-indent: 29px;
   transition: 0.3s;
   opacity: 0;
 }
